# movalytics-pipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
data/normative/: schwartz2008_angles.json
docs/: ARCHITECTURE.md  CONFIG.md
scripts/: README.md
scripts/tools/: README.md  auto_site_markers.py  build_mhr_atlas.py  download_models.py  export_mhr_mesh_json.py  validate_marker_atlas.py
scripts/viz/: README.md  demo_page.py  opensim_mot_viewer.py  sam3d_mesh_viewer.py  serve_demo.py  trc_3d_viewer.py
scripts/viz/mhr_marker_picker/: index.html  main.js  mhr_mesh.json  opensim_scene.json  style.css
src/core/: __init__.py  config.py
src/core/conversion/: __init__.py  mhr_marker_atlas.json  mhr_marker_atlas.py  mhr_marker_indices.npy  mhr_marker_names.json  mhr_markers_to_trc.py  sam3d_clinical_angles.py  sam3d_joint_map.py  sam3d_marker_map.py  sam3d_visualization.py  trc_io.py
src/core/detection/: __init__.py  bbox_detector.py  tracking.py
src/core/kinematics/: __init__.py  angle_export.py  mot_to_clinical.py
src/core/lifting/: __init__.py  opensim_ik.py  sam3d_lifter.py
src/core/pipeline/: __init__.py  cleanup.py
src/core/video/: __init__.py  media_stream.py
src/shared/: __init__.py  constants.py  coordinate_transforms.py  filtering.py  opensim_constants.py
src/workers/: opensim_ik_worker.py  sam3d_worker.py
